--- a/model1.kv
+++ b/model1.kv
@@ -54,7 +54,7 @@ ScreenManager:
             ElementCard:
                 image:"images/setting.png"
                 text:"Setting"
-                on_release: app.root.current = ''
+                on_release: app.root.current = 'setting'
             ElementCard:
                 image:"images/rowing-boat.png"
                 text:"Training Start"
@@ -116,7 +116,7 @@ ScreenManager:
             spacing: 10  # セクション間のスペースを設定
 
             # 上部の画面 (時計)
-            BoxLayout:
+            MDBoxLayout:
                 size_hint_y: 0.5
                 padding: [10, 20]  # 上下にパディングを追加
 
@@ -135,8 +135,9 @@ ScreenManager:
                     theme_text_color: "Primary"
                     font_style: "H2"
 
+
             # 下部の画面 (2分割)
-            BoxLayout:
+            MDBoxLayout:
                 size_hint_y: 0.5
                 spacing: 10  # 左右のセクション間のスペースを設定
 
@@ -160,7 +161,86 @@ ScreenManager:
                         font_style: "H4"
 
                 # 右側の画面 (適当なデータ)
+                MDBoxLayout:
+                    padding: [10, 20]  # 上下にパディングを追加
+
+                    canvas.before:
+                        Color:
+                            rgba: 0.9, 0.9, 0.9, 1  # 背景色を指定
+                        RoundedRectangle:
+                            pos: self.pos
+                            size: self.size
+                            radius: [20]  # 角を丸くする
+
+                    MDLabel:
+                        text: "Sample Data"
+                        halign: "center"
+                        theme_text_color: "Primary"
+                        font_style: "H4"
+
+<RTKSetupScreen>
+    name: 'setting'
+    MDBoxLayout:
+        orientation: "vertical"
+
+        MDToolbar:
+            title: "RowRTK only use GPS"
+            left_action_items: [["arrow-left",lambda x: root.back_screen()]]
+            elevation: 10
+            md_bg_color: 188/255, 227/255, 217/255, 1
+
+        MDBoxLayout:
+            orientation: 'vertical'
+            padding: 10  # 全体にパディングを追加
+            spacing: 10  # セクション間のスペースを設定
+
+            # 上部の画面 (時計)
+            MDBoxLayout:
+                size_hint_y: 0.5
+                padding: [10, 20]  # 上下にパディングを追加
+
+                canvas.before:
+                    Color:
+                        rgba: 0.9, 0.9, 0.9, 1  # 背景色を指定
+                    RoundedRectangle:
+                        pos: self.pos
+                        size: self.size
+                        radius: [20]  # 角を丸くする
+
+                MDLabel:
+                    id: time_label
+                    text: "00:00:00"
+                    halign: "center"
+                    theme_text_color: "Primary"
+                    font_style: "H2"
+
+
+            # 下部の画面 (2分割)
+            MDBoxLayout:
+                size_hint_y: 0.5
+                spacing: 10  # 左右のセクション間のスペースを設定
+
+                # 左側の画面 (日付)
                 BoxLayout:
+                    padding: [10, 20]  # 上下にパディングを追加
+
+                    canvas.before:
+                        Color:
+                            rgba: 0.9, 0.9, 0.9, 1  # 背景色を指定
+                        RoundedRectangle:
+                            pos: self.pos
+                            size: self.size
+                            radius: [20]  # 角を丸くする
+
+                    MDLabel:
+                        id: date_label
+                        text: "YYYY-MM-DD"
+                        halign: "center"
+                        theme_text_color: "Primary"
+                        font_style: "H4"
+
+                # 右側の画面 (適当なデータ)
+                MDBoxLayout:
                     padding: [10, 20]  # 上下にパディングを追加
 
                     canvas.before:
