[追加]新しい関数

--- a/model1.kv
+++ b/model1.kv
@@ -241,15 +241,15 @@ ScreenManager:
 
                 # 右側の画面 (適当なデータ)
                 MDBoxLayout:
-                    padding: [10, 20]  # 上下にパディングを追加
+                    padding: [10, 20]
 
                     canvas.before:
                         Color:
-                            rgba: 0.9, 0.9, 0.9, 1  # 背景色を指定
+                            rgba: 0.9, 0.9, 0.9, 1
                         RoundedRectangle:
                             pos: self.pos
                             size: self.size
-                            radius: [20]  # 角を丸くする
+                            radius: [20]
 
                     MDLabel:
                         text: "Sample Data"
