--- a/model1.kv
+++ b/model1.kv
@@ -3,6 +3,7 @@ ScreenManager:
     MainScreen:
     RTKActivationScreen:
     RTKSetupScreen:
+    StandaloneScreen:
 
 <SplashScreen>:
     name: 'splash'    
@@ -59,12 +60,12 @@ ScreenManager:
                 image:"images/rowing-boat.png"
                 text:"Training Start"
                 subtext: 'only GPS'
-                on_release: app.root.current = 'rtkactivation'
+                on_release: app.root.current = 'standalone'
             ElementCard:
                 image:"images/gps.png"
                 text:"RTK Training Start"
                 subtext: 'Use RTK Positioning System'
-                on_release: app.root.current = ''
+                on_release: app.root.current = 'rtkactivation'
 
 <ElementCard@MDCard>:
     md_bg_color: 120/255, 173/255, 173/255, 1
@@ -98,6 +99,41 @@ ScreenManager:
         MDLabel:
             halign: "center"
             text: root.items_count
+
+<StandaloneScreen>
+    name: 'standalone'
+    MDBoxLayout:
+        orientation: "vertical"
+
+        MDToolbar:
+            title: "GPS stand alone"
+            left_action_items: [["arrow-left",lambda x: root.back_screen()]]
+            md_bg_color: 188/255, 227/255, 217/255, 1
+            elevation: 10
+        
+        MDBoxLayout:
+            orientation: 'vertical'
+
+            MDBoxLayout:
+                size_hint_y: 0.5
+                padding: [10,20]
+
+                canvas.before:
+                    Color:
+                        rgba: 0.9, 0.9, 0.9, 1
+                        RoundedRectangle:
+                            pos: self.pos
+                            size: self.size
+                            radius: [20]
+                MDTextField:
+                    hint_text: "this is velocity"
+
+            MDBottomAppBar:
+                md_bg_color: 188/255, 227/255, 217/255, 1
+                MDToolbar:
+                    icon: "git"
+                    type: "bottom"
+                    icon_color:0.8,0.2,0.2,1
 
 <RTKActivationScreen>
     name: 'rtkactivation'
@@ -184,7 +220,7 @@ ScreenManager:
         orientation: "vertical"
 
         MDToolbar:
-            title: "RowRTK only use GPS"
+            title: "Setting"
             left_action_items: [["arrow-left",lambda x: root.back_screen()]]
             elevation: 10
             md_bg_color: 188/255, 227/255, 217/255, 1
