--- a/model1.kv
+++ b/model1.kv
@@ -110,50 +110,51 @@ ScreenManager:
         orientation: "vertical"
 
         MDToolbar:
-            title: "GPS stand alone"
+            title: "GPS Stand Alone"
             left_action_items: [["arrow-left", lambda x: setattr(root.manager, 'current', 'main')]]
             md_bg_color: 188/255, 227/255, 217/255, 1
             elevation: 10
-        
+
         MDBoxLayout:
             orientation: 'vertical'
 
-            # OpenStreetMap Widget
+            # Speed Data Display
             MDBoxLayout:
-                size_hint_y: 0.7
-                padding: [10,20]
-
+                size_hint_y: 0.4
+                padding: [10, 10]
                 canvas.before:
                     Color:
-                        rgba: 0.9, 0.9, 0.9, 1
-                        RoundedRectangle:
-                            pos: self.pos
-                            size: self.size
-                            radius: [20]
-                
-                # OpenStreetMapウィジェットのためのプレースホルダー（適切なウィジェットで置き換えてください）
-                Widget:
-                    id: map_widget
-                    # ここにOpenStreetMapウィジェットを追加
+                        rgba: 1, 1, 1, 1
+                    RoundedRectangle:
+                        pos: self.pos
+                        size: self.size
+                        radius: [20]
 
-            # 速度データ表示
-            MDBoxLayout:
-                size_hint_y: 0.1
-                padding: [10, 10]
-                md_bg_color: 188/255, 227/255, 217/255, 1
                 MDLabel:
                     id: velocity_label
                     text: "Speed: 0.00"
                     halign: "center"
                     theme_text_color: "Primary"
-                    font_style: "H6"
+                    font_style: "H4"
 
-            MDBottomAppBar:
+            # Start and Stop Buttons
+            MDBoxLayout:
+                orientation: "horizontal"
+                size_hint_y: 0.2
+                spacing: 20
+                padding: [10, 10]
                 md_bg_color: 188/255, 227/255, 217/255, 1
-                MDToolbar:
-                    icon: "play-box"
-                    type: "bottom"
-                    icon_color: 0.8, 0.2, 0.2, 1
+
+                MDFillRoundFlatIconButton:
+                    id: start_stop_button
+                    icon: "play"
+                    text: "Start"
+                    pos_hint: {"center_x": 0.5}
+                    on_release:
+                        root.start_stop_toggle()
+                
+                
+
 
 <RTKActivationScreen>
     name: 'rtkactivation'
